# wealthbox

./: README.rst  pyproject.toml
.github/workflows/: main.yml
tests/: test_wealthbox.py
wealthbox/: __init__.py
