[tool.poetry]
name = "wealthbox"
version = "0.2.5"
description = ""
authors = ["spencerogden-dsam <67068943+spencerogden-dsam@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
